<resources>
	<string name="app_name" translatable="false">Pensamientos</string>

	<string name="activity_main" translatable="false">Pensamientos</string>
	<string name="activity_about">About Pensamientos</string>

	<string name="time_now">Now</string>
	<string name="time_few_minutes_ago">%d m</string>
	<string name="time_yesterday">Yesterday</string>
	<string name="time_today">Today</string>
	<string name="app_version" translatable="false">Pensamientos %s - livae</string>

	<string name="user_agree">%s agree</string>
	<string name="user_disagree">%s disagree</string>
	<string name="flagged_comment_other">Controversial comment</string>
	<string name="flagged_comment_lie">It might be a lie</string>
	<string name="flagged_comment_insult">Offensive language</string>
	<string name="flagged_comment_abuse">Possible abuse</string>
	<string name="flagged_user_other">Controversial</string>
	<string name="flagged_user_lie">Liar</string>
	<string name="flagged_user_insult">Offensive</string>
	<string name="flagged_user_abuse">Bully</string>

	<string name="notifications_flatter_title">Pensamientos Flattered</string>
	<string name="notifications_forthright_title">Pensamientos Forthright</string>
	<string name="notifications_chat_private_title">Pensamientos Chat</string>
	<string name="notifications_summary_comments_more">+%d unread comments</string>
	<string name="notifications_summary_comments">%d unread comments</string>
	<string name="notifications_secret_content">«secret content»</string>

	<string name="provider_contacts">Contacts</string>
	<string name="provider_conversations">Conversations</string>

	<string name="chat_flatter_subtitle">Flatter as <b>%s</b></string>
	<string name="chat_forthright_subtitle">Be forthright as <b>%s</b></string>
	<string name="chat_anonymous_me_subtitle">Anonymous chat with <b>%s</b></string>
	<string name="chat_anonymous_other_subtitle">Anonymous chat</string>

	<string name="anonymous_room_title">Room name</string>
	<string name="anonymous_room_message">The anonymous chat needs a name for the room. It cannot be changed later.</string>
	<string name="anonymous_name_title">Anonymous nick</string>
	<string name="anonymous_name_message">In public chats you need an anonymous nickname. You can change it later anytime.</string>

	<string name="verification_sms" translatable="false">Pensamientos verification code #%d#</string>
	<string name="verification_sms_dialog_confirmation">Are you sure %s is your number?</string>
	<string name="verification_sms_dialog">We have sent a message, please be patient while it is delivered.</string>

	<string name="feedback_email" translatable="false">pensamientos@livae.com</string>
	<string name="feedback_email_subject" translatable="false">Pensamientos Feedback</string>
	<string name="feedback_email_body" translatable="false"/>
	<string name="send_feedback">Send feedback</string>

	<string name="tab_flatter">Flatterer</string>
	<string name="tab_private">Private</string>
	<string name="tab_forthright">Forthright</string>

	<string name="menu_change_picture">My profile</string>
	<string name="menu_refresh_contacts">Refresh contacts</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_feedback">Send feedback</string>
	<string name="menu_share">Share Pensamientos</string>
	<string name="menu_rate">Rate</string>
	<string name="menu_agree">Agree</string>
	<string name="menu_disagree">Disagree</string>
	<string name="menu_indifferent">Indifferent</string>
	<string name="menu_flag_comment">Flag comment</string>
	<string name="menu_flag_comment_abuse">Abuse or Bulling</string>
	<string name="menu_flag_comment_insult">Swearing or insults</string>
	<string name="menu_flag_comment_lie">Lie</string>
	<string name="menu_flag_comment_other">Other</string>
	<string name="menu_user_block">Block user</string>
	<string name="menu_user_unblock">Unblock user</string>
	<string name="menu_public_block">Block chat</string>
	<string name="menu_public_unblock">Unblock chat</string>

	<string name="button_about_terms_conditions">Terms and conditions</string>
	<string name="button_about_rate_app">Rate this App</string>
	<string name="button_about_feedback">Give us Feedback</string>
	<string name="button_share_this_app">Share Pensamientos with your friends</string>
	<string name="button_share_app">Share</string>
	<string name="button_got_it">Got it</string>
	<string name="button_update">Update</string>
	<string name="button_retry">Retry</string>
	<string name="button_continue">Continue</string>
	<string name="button_finish">Finish</string>
	<string name="button_anonymous">Anonymous</string>
	<string name="button_secret">Secret</string>
	<string name="button_normal">Normal</string>
	<string name="button_block">Block</string>
	<string name="button_unblock">Unblock</string>

	<string name="confirmation_block_user">Do you want to block the user?</string>
	<string name="confirmation_block_anonymous_user">Do you want to block this user for private anonymous conversations? The conversation will be deleted. The block is temporary as it is impossible to cancel.</string>
	<string name="button_block_100_days">100 days</string>
	<string name="button_block_30_days">30 days</string>
	<string name="button_block_7_days">7 days</string>
	<string name="button_block_1_day">1 day</string>
	<string name="confirmation_user_blocked">User blocked</string>
	<string name="confirmation_user_unblocked">User unblocked</string>
	<string name="confirmation_forthright_blocked">Public forthright messages blocked since now</string>
	<string name="confirmation_forthright_unblocked">All public forthright messages unblocked</string>
	<string name="confirmation_block_forthright_chat">When you block this public chat only the new messages from others users are hidden. The old messages can still be read.</string>
	<string name="confirmation_unblock_forthright_chat">If you unblock this public chat all messages will be visible for everyone.</string>

	<string name="error_loading_elements">Error loading the elements</string>
	<string name="error_network_no_api_connection">Connection with server failed.</string>
	<string name="error_cannot_register_new_device">Couldn\'t sign in with the device.</string>
	<string name="error_network_error">Error connecting, check your network.</string>
	<string name="error_unknown">Unknown error: %s</string>
	<string name="error_api">API error: %s</string>
	<string name="error_unexpected">Unexpected error: %s</string>
	<string name="error_signing_in_retry">Error signing in (%s).\nRetry?</string>
	<string name="error_sms_not_sent">Error, we couldn\'t sent the SMS.\nRetry?</string>
	<string name="on_boarding_welcome_title">Welcome to Pensamientos</string>
	<string name="on_boarding_welcome"> Pensamientos lets you share your thoughts about others
		anonymously and public.
		\n\nYou can either flatter your friends with nice compliments o be forthright and tell them
		what they need to know. You can also have private conversations.
	</string>
	<string name="on_boarding_validate_number_title">Verify your number</string>
	<string name="on_boarding_validate_number"> Pensamientos needs to verify your phone number so
		you can reply to comments and receive private chats. We will send a one time SMS in order
		to verify it. Carrier SMS charges may apply. By validating you accept the
		<a href="http://pensamientos.livae.com/terms.html">terms and conditions of the service</a>.
	</string>
	<string name="on_boarding_warning_title">Phone verified</string>
	<string name="on_boarding_warning">Phone number verified!
		\n\nOffensive and non constructive comments will be deleted. Mind your words before
		commenting and please alert us about abuses to keep a good community.
	</string>
	<string name="on_boarding_payments_title">Payments</string>
	<string name="on_boarding_payments">Pensamientos is in beta, it means the app has bugs but
		it is also completely free by now.
	</string>

	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="me">me</string>
	<string name="delete">Delete</string>
	<string name="settings">Settings</string>
	<string name="signing_in">Signing in…</string>
	<string name="empty_text">Ops… there is nothing here.</string>
	<string name="empty_chat_flatter">No compliments here, be the first! \n<i>Comments older than 100 days are deleted.</i></string>
	<string name="empty_chat_forthright">Ops… nothing here. Comments older than 100 days are deleted.</string>
	<string name="phone_number">Phone number</string>
	<string name="post_comment_hint">Type a comment…</string>
	<string name="no_contacts">You don\'t have any mobile contact.</string>
	<string name="no_contacts_in_app">None of your contacts has the app installed.</string>
	<string name="nothing_found">We haven\'t find anything</string>
	<string name="start_first_conversation_tutorial">
		Start a new chat:
		\n\n• <b>Normal</b>: as you do in other apps.
		\n\n• <b>Secret</b>: comments are deleted after read them.
		\n\n• <b>Anonymous</b>: the other person wont know who you are.
		\n\n← <b>Flatter</b> your friends public and anonymously.
		\n\n→ Be <b>Forthright</b> with your friends public and anonymously.
	</string>
	<string name="no_conversations">There are no conversation with the current search terms.</string>
	<string name="search">Search</string>
	<string name="edit">Edit</string>
	<string name="select_contact">Select Contact</string>
	<string name="sending_comment">Sending comment</string>
	<string name="selected_count">%d selected</string>
	<string name="copy">Copy</string>
	<string name="copy_conversation_label">Pensamientos Conversation</string>
	<string name="comments_copied">Comments copied</string>
	<string name="comment_flagged">Comment flagged</string>
	<string name="hidden_comment">«hidden comment»</string>
	<string name="button_add_contact">Add Contact</string>
	<string name="menu_notifications">Notifications</string>
	<string name="menu_notification_color">Led color</string>
	<string name="menu_notification_sound">Sound</string>
	<string name="menu_notification_mute">Mute</string>
	<string name="menu_notification_cancel_mute">Cancel mute</string>
	<string name="select_notification_color">Notification Led Color:</string>
	<string name="default_color">Default Color</string>
	<string name="select_notification_mute">Mute for:</string>
	<string name="select_notification_sound">Notification sound:</string>
	<string name="notification_color_update">Color for notifications updated.</string>
	<string name="notification_muted">Conversation muted.</string>
	<string name="notification_cancel_muted">Conversation un-muted.</string>
	<string name="notification_sound_updated">Sound for notifications updated.</string>
	<string-array
		name="notification_mute_array">
		<item>8 hours</item>
		<item>1 day</item>
		<item>1 week</item>
		<item>Forever</item>
	</string-array>

</resources>
