<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	>
	<item
		android:id="@+id/action_agree"
		android:title="@string/menu_agree"/>
	<item
		android:id="@+id/action_disagree"
		android:title="@string/menu_disagree"/>
	<item
		android:id="@+id/action_indifferent"
		android:title="@string/menu_indifferent"/>
	<item
		android:id="@+id/action_flag"
		android:title="@string/menu_flag_comment">
		<menu>
			<item
				android:id="@+id/action_flag_abuse"
				android:title="@string/menu_flag_comment_abuse"/>
			<item
				android:id="@+id/action_flag_insult"
				android:title="@string/menu_flag_comment_insult"/>
			<item
				android:id="@+id/action_flag_lie"
				android:title="@string/menu_flag_comment_lie"/>
			<item
				android:id="@+id/action_flag_other"
				android:title="@string/menu_flag_comment_other"/>
		</menu>
	</item>
</menu>
