<merge xmlns:android="http://schemas.android.com/apk/res/android">

	<TextView
		android:id="@+id/about_app_description"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_marginBottom="@dimen/space_huge"
		android:layout_marginLeft="@dimen/space_large"
		android:layout_marginRight="@dimen/space_large"
		android:layout_marginTop="@dimen/space_huge"
		android:text="@string/app_description"
		android:textAppearance="?android:attr/textAppearanceMedium"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/darker"/>

	<Button
		android:id="@+id/button_details_feedback"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?android:attr/selectableItemBackground"
		android:text="@string/button_about_feedback"
		android:textAllCaps="false"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/darker"/>

	<Button
		android:id="@+id/button_details_rate_app"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?android:attr/selectableItemBackground"
		android:text="@string/button_about_rate_app"
		android:textAllCaps="false"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/darker"/>

	<Button
		android:id="@+id/button_share_this_app"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?android:attr/selectableItemBackground"
		android:text="@string/button_share_this_app"
		android:textAllCaps="false"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/darker"/>

	<Button
		android:id="@+id/button_details_terms_conditions"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?android:attr/selectableItemBackground"
		android:text="@string/button_about_terms_conditions"
		android:textAllCaps="false"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/darker"/>

	<TextView
		android:id="@+id/about_app_version"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:layout_marginTop="@dimen/space_huge"
		android:paddingBottom="@dimen/space_large"
		android:paddingTop="@dimen/space_huge"
		android:text="@string/app_version"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

</merge>