<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.design.widget.CoordinatorLayout-->
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?actionBarSize"
		android:layout_gravity="top"
		app:title="@string/on_boarding_payments_title"/>

	<TextView
		android:id="@+id/text_content"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@id/toolbar"
		android:layout_marginLeft="@dimen/space_huge"
		android:layout_marginRight="@dimen/space_huge"
		android:layout_marginTop="@dimen/space_on_boarding"
		android:lineSpacingMultiplier="1.2"
		android:text="@string/on_boarding_payments"
		android:textAppearance="?android:attr/textAppearanceLarge"/>

	<Button
		android:id="@+id/button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_gravity="bottom|end"
		android:layout_margin="@dimen/space_large"
		android:text="@string/button_finish"/>

</RelativeLayout>