<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.design.widget.CoordinatorLayout-->
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/bar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="top">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			app:titleMarginStart="@dimen/space_huge"
			app:titleMarginEnd="@dimen/space_huge"
			android:layout_width="match_parent"
			android:layout_height="?actionBarSize"
			android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
			app:title="@string/on_boarding_welcome_title"/>

	</android.support.design.widget.AppBarLayout>

	<TextView
		android:id="@+id/text_content"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:layout_below="@id/bar_layout"
		android:layout_marginLeft="@dimen/space_huge"
		android:layout_marginRight="@dimen/space_huge"
		android:layout_marginTop="@dimen/space_on_boarding"
		android:lineSpacingMultiplier="1.2"
		android:text="@string/on_boarding_welcome"
		android:textAppearance="?android:attr/textAppearanceLarge"/>

	<Button
		android:id="@+id/button"
		android:background="@drawable/button_action"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_gravity="bottom"
		android:text="@string/button_continue"/>

</RelativeLayout>