<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_shadow"
                android:clickable="true"
                android:layout_gravity="bottom|end">

	<android.support.design.widget.FloatingActionButton
		android:id="@+id/close_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_margin="@dimen/space_huge"
		android:src="@drawable/ic_content_clear_white_24dp"
		app:borderWidth="0dp"
		app:fabSize="normal"/>

	<LinearLayout
		android:id="@+id/create_chat_private"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@id/close_button"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_marginEnd="@dimen/space_huge"
		android:layout_marginRight="@dimen/space_huge"
		android:layout_marginTop="@dimen/space_normal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:padding="@dimen/space_normal"
			android:text="@string/button_anonymous"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="?android:attr/textColorPrimaryInverse"/>

		<android.support.design.widget.FloatingActionButton
			android:id="@+id/create_chat_private_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/space_normal"
			android:src="@drawable/ic_question_mark_white_24dp"
			app:backgroundTint="@color/purple"
			app:borderWidth="0dp"
			app:fabSize="mini"
			app:rippleColor="@color/purple_dark"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/create_chat_secret"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@id/create_chat_private"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_marginEnd="@dimen/space_huge"
		android:layout_marginRight="@dimen/space_huge"
		android:layout_marginTop="@dimen/space_normal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:padding="@dimen/space_normal"
			android:text="@string/button_secret"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="?android:attr/textColorPrimaryInverse"/>

		<android.support.design.widget.FloatingActionButton
			android:id="@+id/create_chat_secret_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/space_normal"
			android:src="@drawable/ic_timer_white_24dp"
			app:backgroundTint="@color/purple"
			app:borderWidth="0dp"
			app:fabSize="mini"
			app:rippleColor="@color/purple_dark"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/create_chat_normal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@id/create_chat_secret"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true"
		android:layout_marginEnd="@dimen/space_huge"
		android:layout_marginRight="@dimen/space_huge"
		android:layout_marginTop="@dimen/space_normal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:padding="@dimen/space_normal"
			android:text="@string/button_normal"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="?android:attr/textColorPrimaryInverse"/>

		<android.support.design.widget.FloatingActionButton
			android:id="@+id/create_chat_normal_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/space_normal"
			android:src="@drawable/ic_chat_bubble_outline_white_24dp"
			app:backgroundTint="@color/purple"
			app:borderWidth="0dp"
			app:fabSize="mini"
			app:rippleColor="@color/purple_dark"/>

	</LinearLayout>

</RelativeLayout>